elfk/kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: loging
spec:
  rules:
  - host: kibana.linux.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
